Added changing themes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" href="style.css" id="var">
      <link rel="preconnect" href="https://fonts.googleapis.com">
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
      <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
@@ -13,6 +13,7 @@
      <span id="centre-text">Click to Start</span>
 
      <div id="board">
+          <p class="hi-score">HI: <span id="hi-score">0</span></p>
           <p class="score">Score: <span id="score">0</span></p>
           <div id="game">
                <div id="character">
