--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Hello World!</title>
-    <link rel="stylesheet" href="index.css" />
-  </head>
-  <body>
-    <h1>💖 Hello World!</h1>
-    <p>Welcome to your Electron application.</p>
-  </body>
+<html lang="en">
+<head>
+     <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link rel="stylesheet" href="style.css" id="var">
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+     <title>Chrome Game</title>
+</head>
+<body onload="startGameplay()">
+     <span id="centre-text">Click to Start</span>
+
+     <div id="board">
+          <p class="hi-score">HI: <span id="hi-score">0</span></p>
+          <p class="score">Score: <span id="score">0</span></p>
+          <div id="game">
+               <div id="character">
+                    <img id="charImg" src="./resources/active-day.png" alt="character">
+               </div>
+               <div id="block"></div>
+          </div>
+     </div>
+
+     <script src="./script.js"></script>
+</body>
 </html>
