--- a/web/index.html
+++ b/web/index.html
@@ -3,6 +3,8 @@
 <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta name="author" content="Ore Ajibade">
+     <link rel="icon" href="resources/icon.ico">
      <link rel="stylesheet" href="style.css" id="var">
      <link rel="preconnect" href="https://fonts.googleapis.com">
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
