--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- >
+
+     LINK TO: CHROME GAME
+
+< !-->
+
 <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +16,7 @@
 
      <!-- Link -->
      <meta http-equiv="refresh"
-               content="7 ; url='./web/index.html'">
+               content="0.5 ; url='./web/index.html'">
 
      <style>
           body {
@@ -45,158 +51,6 @@
                bottom: 0;
                right: 0;
                z-index: 10;
-          }
-
-          .loader{
-               display: flex;
-               gap: 1px
-          }
-
-          .bar {
-               width: 8px;
-               height: 50px;
-               margin: 0;
-               padding: 0;
-               background: transparent;
-               animation: loader 5s linear infinite;
-               z-index: 100;
-               border-radius: 3px;
-          }
-
-          .bar1 {
-               animation-delay: 0.1s;
-          }
-
-          .bar2 {
-               animation-delay: 0.2s;
-          }
-
-          .bar3 {
-               animation-delay: 0.3s;
-          }
-
-          .bar4 {
-               animation-delay: 0.4s;
-          }
-
-          .bar5 {
-               animation-delay: 0.5s;
-          }
-
-          .bar6 {
-               animation-delay: 0.6s;
-          }
-
-          .bar7 {
-               animation-delay: 0.7s;
-          }
-
-          .bar8 {
-               animation-delay: 0.8s;
-          }
-
-          .bar9 {
-               animation-delay: 0.9s;
-          }
-
-          .bar10 {
-               animation-delay: 1.0s;
-          }
-
-          .bar11 {
-               animation-delay: 1.1s;
-          }
-
-          .bar12 {
-               animation-delay: 1.2s;
-          }
-
-          .bar13 {
-               animation-delay: 1.3s;
-          }
-
-          .bar14 {
-               animation-delay: 1.4s;
-          }
-
-          .bar15 {
-               animation-delay: 1.5s;
-          }
-
-          .bar16 {
-               animation-delay: 1.6s;
-          }
-
-          .bar17 {
-               animation-delay: 1.7s;
-          }
-
-          .bar18 {
-               animation-delay: 1.8s;
-          }
-
-          .bar19 {
-               animation-delay: 1.9s;
-          }
-
-          .bar20 {
-               animation-delay: 2.0s;
-          }
-
-          .bar21 {
-               animation-delay: 2.1s;
-          }
-
-          .bar22 {
-               animation-delay: 2.2s;
-          }
-
-          .bar23 {
-               animation-delay: 2.3s;
-          }
-
-          .bar24 {
-               animation-delay: 2.4s;
-          }
-
-          .bar25 {
-               animation-delay: 2.5s;
-          }
-          .bar26 {
-               animation-delay: 2.6s;
-          }
-
-          .bar27 {
-               animation-delay: 2.7s;
-          }
-
-          .bar28 {
-               animation-delay: 2.8s;
-          }
-
-          .bar29 {
-               animation-delay: 2.9s;
-          }
-
-          .bar30 {
-               animation-delay: 3.0s;
-          }
-
-          @keyframes loader {
-               0% {
-                    transform: scaleY(0.1);
-                    background: transparent;
-               }
-
-               50% {
-                    transform: scaleY(1);
-                    background: white;
-               }
-
-               100% {
-                    transform: scaleY(0.1);
-                    background: transparent;
-               }
           }
 
           .circles {
@@ -317,42 +171,9 @@
      <title>Loading...</title>
 </head>
 
-<body>
+<body onclick="location = './web/index.html'">
      <img src="https://avatars.githubusercontent.com/u/109004601?v=4?s=400" alt="king525dev" class="profile">
      <p class="usname">@king525dev</p>
-     <div class="loader">
-          <div class="bar bar1"></div>
-          <div class="bar bar2"></div>
-          <div class="bar bar3"></div>
-          <div class="bar bar4"></div>
-          <div class="bar bar5"></div>
-          <div class="bar bar6"></div>
-          <div class="bar bar7"></div>
-          <div class="bar bar8"></div>
-          <div class="bar bar9"></div>
-          <div class="bar bar10"></div>
-          <div class="bar bar11"></div>
-          <div class="bar bar12"></div>
-          <div class="bar bar13"></div>
-          <div class="bar bar14"></div>
-          <div class="bar bar15"></div>
-          <div class="bar bar16"></div>
-          <div class="bar bar17"></div>
-          <div class="bar bar18"></div>
-          <div class="bar bar19"></div>
-          <div class="bar bar20"></div>
-          <div class="bar bar21"></div>
-          <div class="bar bar22"></div>
-          <div class="bar bar23"></div>
-          <div class="bar bar24"></div>
-          <div class="bar bar25"></div>
-          <div class="bar bar26"></div>
-          <div class="bar bar27"></div>
-          <div class="bar bar28"></div>
-          <div class="bar bar29"></div>
-          <div class="bar bar30"></div>
-
-     </div>
 
      <ul class="circles">
           <li></li>
